# systemds

./: .asf.yaml  .asf.yml  .gitattributes  .gitignore  .gitmodules  .jazzignore  .travis.yml  .uuid  1  1.mtd  1000.mtd  1R  A.csv  A.csv.mtd  A_big_sparse.mtx  B.csv  B.csv.mtd  B_altwide.mtd  B_altwide_spark.mtd  B_big.mtd  B_big_local.mtd  B_big_spark.mtd  B_dml.mtd  B_mixed.mtd  B_mixed_spark.mtd  B_mixed_spark_all_sorted  B_single  B_single.mtd  B_small.mtd  B_small_spark.mtd  B_zeroheavy  B_zeroheavy.mtd  B_zeroheavy_spark.mtd  CITATION  CITATION.cff  CLAUDE.md  CLAUDE_CODE_PLAN.md  CONTRIBUTING.md  CORE_SCRIPTS_STATUS.txt  DISCLAIMER  (+98 more)
.claude/: settings.local.json
.github/: dependabot.yml
Algorithms Reference/: .jazzignore  ALS.tex  Cox.tex  DecisionTrees.tex  DescriptiveBivarStats.tex  DescriptiveStats.tex  GLM.tex  GLMpredict.tex  Kmeans.tex  LogReg.tex  MultiSVM.tex  PCA.tex  RandomForest.tex  StepLinRegDS.tex  SystemML_Algorithms_Reference.tex
B_altwide_spark/: part-00001
B_big/: part-00001
B_big_spark/: part-00000
B_dml/: part-00001
Language Reference/: SystemML_Language_Reference.html
SystemML/: .jazzignore  .project
Testing/: lenet_test.dml  resnet_test.dml  test.dml
_layouts/: global.html
_linux/: applicationLibraries.xml  path.macros.xml
alg-ref/: .gitignore  Cox.tex  DecisionTrees.tex  DescriptiveStratStats.tex  DescriptiveUnivarStats.tex  GLM.tex  Kmeans.tex  LinReg.tex  MultiSVM.tex  PCA.tex
cache/: cust_str.bin.mtd  dates_min.bin.mtd  dates_num.bin.mtd  dates_str.bin.mtd  line_all.bin.mtd  line_min.bin.mtd  line_q1.bin.mtd  part_str.bin.mtd  supp_str.bin.mtd
conf/: .uuid  SystemDS-config-defaults.xml  SystemDS-config.xml  SystemDS-config.xml.template  SystemML-config.xml.template  log4j-compression.properties  log4j-silent.properties  log4j.properties  log4j.properties.template  single_thread.xml  systemds-env.sh.template  systemml-env.sh.template
content/: LICENSE  community.html  datasets.html  documentation.html  download.html  get-started.html  index.html  install-systemml.html  jquery-ui.css  maturity.html  privacy-policy.html  roadmap.html  security.html  systemml-release-notes-0.11.0-incubating.html  systemml-release-notes-0.12.0-incubating.html  systemml-release-notes-0.14.0-incubating.html  systemml-release-notes-0.15.0.html  systemml-release-notes-1.2.0.html  tutorial-kdd2017.html
css/: main.css
data/: customer.tbl  date.tbl  haberman.csv  lineorder3.tbl  supplier.tbl
dev/: .uuid  CodeStyle_eclipse.xml  Tasks-obsolete.txt  Tasks.txt  format-changed.sh  format-exclude.txt  format_changed.py  ooc-benchmark-plan.md  project import.md
devdocs/: MatrixMultiplicationOperators.txt  deep-learning.md  gpu-backend.md  python_api.html
dml_test/: keywordSpotting.dml  stft.dml
docker/: .uuid  README.md  build.sh  entrypoint.sh  project_systemds-3878.md  push.sh  pythonsysds.Dockerfile  pythonsysdslight.Dockerfile  runDocker.sh  sysds.Dockerfile  sysdslight.Dockerfile  sysdslight_multistage.Dockerfile  sysdslocal.Dockerfile  systemds-3878_summary-of-changes.md  testsysds.Dockerfile  testsysdslight.Dockerfile
docs/: .gitignore  .uuid  Gemfile  README.md  Tasks.txt  _config.yml  accelerator.md  algorithms-bibliography.md  algorithms-classification.md  algorithms-clustering.md  (+42 more)
src/main/cpp/: CMakeLists.txt  build.bat  build.sh  build_BLAS.sh  build_HE.sh  build_mkl.sh  check-dependency-linux-x86_64.sh  common.h  config.h.cmake  imgUtils.cpp  imgUtils.h  libmatrixdnn.cpp  libmatrixdnn.h  libmatrixmult.cpp  libmatrixmult.h  systemds.cpp  systemds.h  systemds_img.cpp  systemml.cpp  systemml.h
src/main/cpp/cmake/: FindMKL.cmake  FindOpenBLAS.cmake
src/main/cpp/he/: CMakeLists.txt  he.cpp  he.h  libhe.cpp  libhe.h
src/main/cpp/jni/: CMakeLists.txt  build_cujava_libs.sh
src/main/cpp/jni/common/: CMakeLists.txt  cujava_jni_utils.cpp  cujava_jni_utils.hpp  cujava_logger.cpp  cujava_logger.hpp  cujava_pointer_utils.cpp  cujava_pointer_utils.hpp
src/main/cpp/jni/cublas/: CMakeLists.txt  cujava_cublas.cpp  cujava_cublas.hpp  cujava_cublas_common.hpp
src/main/cpp/jni/cudnn/: cujava_cudnn.cpp
src/main/cpp/jni/cusolver/: cujava_cusolver.cpp
src/main/cpp/jni/cusparse/: CMakeLists.txt  cujava_cusparse.cpp  cujava_cusparse.hpp  cujava_cusparse_common.hpp
src/main/cpp/jni/driver/: CMakeLists.txt  cujava_driver.cpp  cujava_driver.hpp  cujava_driver_common.hpp
src/main/cpp/jni/runtime/: CMakeLists.txt  cujava_runtime.cpp  cujava_runtime.hpp  cujava_runtime_common.hpp
src/main/cpp/kernels/: Makefile  SystemDS.cu  SystemDS.ptx  SystemML.cu  SystemML.ptx  agg_ops.cuh  cum_max.cuh  cum_min.cuh  cum_prod.cuh  cum_scan.cuh  cum_sum.cuh  cum_sum_prod.cuh  reduction.cu  reduction.cuh  reduction.ptx  utils.cuh
src/main/cpp/lib/: libpreload_systemml-Darwin-x86_64.dylib  libsystemds_spoof_native_cuda-Windows-AMD64.lib  libsystemml_mkl-Darwin-x86_64.dylib  libsystemml_openblas-Darwin-x86_64.dylib
src/main/cpp/preload/: preload_systemml.cpp  preload_systemml.h
src/main/cpp/ptx/: reduction.ptx
src/main/cpp/spoof/templates/: cellwise.cu
src/main/cpp/spoof_native_cuda/: CMakeLists.txt  host_utils.h  jitify.hpp  spoof_native_cuda.cpp  spoof_native_cuda.h  spoof_native_jni.cpp  spoof_native_jni.h  spoof_utils.cuh
src/main/cuda/: CMakeLists.txt  SystemDS.cu  cum_max.cuh  cum_min.cuh  cum_scan.cuh
src/main/cuda/headers/: Matrix.h  TempStorage.cuh  agg_ops.cuh  cum_max.cuh  cum_min.cuh  cum_prod.cuh  cum_scan.cuh  cum_sum.cuh  cum_sum_prod.cuh  intellisense_cuda_intrinsics.h  operators.cuh  reduction.cuh  spoof_utils.cuh  utils.cuh  vector_add.cuh  vector_write.cuh
src/main/cuda/kernels/: SystemDS.cu  SystemDS.ptx  reduction.cu  reduction.ptx
src/main/cuda/ptx/: SystemDS.ptx  reduction.ptx
src/main/cuda/spoof/: cellwise.cu  functions.cuh  host_utils.h  jni_bridge.cpp  jni_bridge.h  launcher.cpp  launcher.h  rowwise.cu
src/main/cuda/spoof-launcher/: SpoofCUDAContext.cpp  SpoofCUDAContext.h  SpoofCellwise.h  SpoofOperator.h  SpoofRowwise.h  host_utils.h  jni_bridge.cpp  jni_bridge.h
src/main/cuda/spoof-templates/: cellwise.cu
(+44028 files in other folders)
